[project]
name = "mapuche"
version = "1.0.0"
authors = [
    {name = "Alexey Lapshin", email = "alexeyfonlapshin@gmail.com"},
]
description = "Linker's map file browser"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["map", "elf", "linker"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "textual==0.85.1",
]

[project.scripts]
mapuche = "mapuche.mapuche:main"

[tool.setuptools.packages.find]
include = ["mapuche"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
